<resources>
    <string name="app_name">Tip Time</string>
    <string name="okay_servico">Okay (15%\')</string>
    <string name="bom_servico">Bom (18%)</string>
    <string name="maravilha_servico">Maravilha (20%)</string>
    <string name="arredondar_gorjeta">Arredondar gorjeta</string>
    <string name="calcular">Calcular</string>
    <string name="valor_da_gorjeta">Valor da gorjeta %s</string>
    <string name="custo_do_servi_o">Custo do Serviço</string>
    <string name="servico_pergunta">Como foi o serviço?</string>
</resources>