<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/custo_do_servico"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/custo_do_servi_o"

        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pergunta_servico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/servico_pergunta"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custo_do_servico" />

    <RadioGroup
        android:id="@+id/opcoes_gorjeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pergunta_servico">

        <RadioButton
            android:id="@+id/opcao_20porCento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maravilha_servico" />

        <RadioButton
            android:id="@+id/opcao_18porCento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bom_servico" />

        <RadioButton
            android:id="@+id/opcao_15porCento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/okay_servico" />

    </RadioGroup>

    <Switch
        android:id="@+id/arredondar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:minHeight="48dp"
        android:text="@string/arredondar_gorjeta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/opcoes_gorjeta"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/botao_calcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/arredondar" />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Valor gorjeta $10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/botao_calcular" />

</androidx.constraintlayout.widget.ConstraintLayout>